@@ -24,7 +24,7 @@ import org.faktorips.datatype.Datatype;
 import org.faktorips.devtools.core.IpsPlugin;
 import org.faktorips.devtools.core.IpsStatus;
 import org.faktorips.devtools.core.model.tablecontents.IRow;
-import org.faktorips.devtools.core.model.tablecontents.ITableContentsGeneration;
+import org.faktorips.devtools.core.model.tablecontents.ITableRows;
 import org.faktorips.devtools.core.model.tablestructure.IColumn;
 import org.faktorips.devtools.core.model.tablestructure.ITableStructure;
 import org.faktorips.devtools.tableconversion.AbstractTableImportOperation;
@@ -47,11 +47,11 @@ public class CSVTableImportOperation extends AbstractTableImportOperation {
     /**
      * Generation of the table contents the import has to be inserted.
      */
-    private ITableContentsGeneration targetGeneration;
+    private ITableRows targetGeneration;
 
-    public CSVTableImportOperation(ITableStructure structure, String sourceFile,
-            ITableContentsGeneration targetGeneration, ITableFormat format, String nullRepresentationString,
-            boolean ignoreColumnHeaderRow, MessageList list, boolean importIntoExisting) {
+    public CSVTableImportOperation(ITableStructure structure, String sourceFile, ITableRows targetGeneration,
+            ITableFormat format, String nullRepresentationString, boolean ignoreColumnHeaderRow, MessageList list,
+            boolean importIntoExisting) {
 
         super(sourceFile, format, nullRepresentationString, ignoreColumnHeaderRow, list, importIntoExisting);
 
@@ -117,7 +117,7 @@ public class CSVTableImportOperation extends AbstractTableImportOperation {
         }
     }
 
-    private void fillGeneration(ITableContentsGeneration targetGeneration, FileInputStream fis) throws IOException {
+    private void fillGeneration(ITableRows targetGeneration, FileInputStream fis) throws IOException {
         char fieldSeparator = getFieldSeparator();
         CSVReader reader = new CSVReader(new InputStreamReader(fis), fieldSeparator);
 
@@ -155,8 +155,8 @@ public class CSVTableImportOperation extends AbstractTableImportOperation {
 
                     if (tableField == null) {
                         Object[] objects = new Object[3];
-                        objects[0] = new Integer(rowNumber);
-                        objects[1] = new Integer(j);
+                        objects[0] = Integer.valueOf(rowNumber);
+                        objects[1] = Integer.valueOf(j);
                         objects[2] = IpsPlugin.getDefault().getIpsPreferences().getNullPresentation();
                         String msg = NLS
                                 .bind("In row {0}, column {1} no value is set - imported {2} instead.", objects); //$NON-NLS-1$
